2023-04-07  Youling Tang  <tangyouling@loongson.cn>

	* Makefile.am (loongarch_SRCS): Add loongarch_unwind.c.
	* loongarch_init.c (loongarch_init): Hook unwind.
	* loongarch_unwind.c: New file.

2023-04-07  Youling Tang  <tangyouling@loongson.cn>

	* Makefile.am (loongarch_SRCS): Add loongarch_retval.c.
	* loongarch_init.c (loongarch_init): Hook return_value_location.
	* loongarch_retval.c: New file.

2023-04-07  Youling Tang  <tangyouling@loongson.cn>

	* Makefile.am (loongarch_SRCS): Add loongarch_initreg.c.
	* loongarch_initreg.c: New file.
	* loongarch_init.c (loongarch_init): Hook set_initial_registers_tid.

2023-04-07  Youling Tang  <tangyouling@loongson.cn>

	* Makefile.am (loongarch_SRCS): Add loongarch_cfi.c and loongarch_regs.c.
	* loongarch_cfi.c: New file.
	* loongarch_regs.c: Likewise.
	* loongarch_init.c (loongarch_init): Hook register_info and abi_cfi.

2023-04-01  Youling Tang  <tangyouling@loongson.cn>

	* loongarch_init.c (loongarch_init): Hook check_special_symbol.
	* loongarch_symbol.c (loongarch_check_special_symbol): New function.

2023-04-01  Youling Tang  <tangyouling@loongson.cn>

	* loongarch_reloc.def: Add RELOC_TYPE B16 to RELAX.

2023-02-07  Mark Wielaard  <mark@klomp.org>

	* libebl_CPU.h (dwarf_peeled_die_type): Explicitly handle
	DW_TAG_unspecified_type as if there was no DW_AT_type.

2023-01-19  Mark Wielaard  <mark@klomp.org>

	* sparc_reloc.def (NONE): Add EXEC and DYN.

2022-12-21  Shahab Vahedi  <shahab@synopsys.email>

	* Makefile.am (modules): Add arc.
	(arc_SRCS): Added.
	(libebl_backends_a_SOURCES): Append arc_SRCS.
	* arc_init.c: New file.
	* arc_reloc.def: New file.
	* arc_symbol.c: New file.

2022-12-02  Hengqi Chen  <hengqi.chen@gmail.com>

	* Makefile.am (modules): Add loongarch.
	* loongarch_init.c: New file.
	* loongarch_reloc.def: New file.
	* loongarch_symbol.c: New file.

2022-08-09  Andreas Schwab  <schwab@suse.de>

	* riscv_init.c (riscv_init): HOOK segment_type_name,