@@ -49,6 +49,7 @@ loongarch_init (Elf *elf __attribute__ ((unused)),
   HOOK (eh, reloc_simple_type);
   HOOK (eh, machine_flag_check);
   HOOK (eh, register_info);
+  HOOK (eh, core_note);
   HOOK (eh, abi_cfi);
   /* gcc/config/ #define DWARF_FRAME_REGISTERS.  */
   eh->frame_nregs = 74;
